--- a/templates/request/list.html.twig
+++ b/templates/request/list.html.twig
@@ -1,7 +1,7 @@
-{% include 'base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Список запросов:</h1>
+    <h1>Список заявок:</h1>
     <div>
         <table width="100%" class="table table-bordered">
             <thead>
