--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,12 +8,18 @@
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% endblock %}
 
-
-
 </head>
 <body>
-{% block body %}
-{% endblock %}
+<div class="container">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="{{ path('app.registration') }}" class="nav-link">Регистрация</a></li>
+        </ul>
+    </header>
+    {% block body %}
+    {% endblock %}
+</div>
+
 {% block javascripts %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
